--- a/package.json
+++ b/package.json
@@ -11,16 +11,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@reduxjs/toolkit": "^1.9.5",
     "framer-motion": "^10.12.16",
     "lodash": "^4.17.21",
-    "popmotion": "^11.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-multi-carousel": "^2.8.4",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "typed.js": "^2.0.16"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
